--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- v8 - adjacent spreading neural animation -->
+<!-- v9 - mobile profile/brain toggle -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
