--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta name="twitter:image" content="https://floriankaempf.com/portrait.jpg">
 
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="canonical" href="https://floriankaempf.com/">
 
     <!-- Structured Data for Google -->
     <script type="application/ld+json">
