new icon and message

--- a/index.html
+++ b/index.html
@@ -5,26 +5,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Florian Kämpf</title>
+    <title>Florian Kämpf | Neural Circuits & Behaviour</title>
     <meta name="description"
         content="PhD researcher studying neural circuits and internal states in Drosophila at the MRC Laboratory of Molecular Biology, Cambridge.">
 
     <!-- Open Graph / Social Sharing -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://floriankaempf.com/">
-    <meta property="og:title" content="Florian Kämpf">
+    <meta property="og:title" content="Florian Kämpf | Neural Circuits & Behaviour">
     <meta property="og:description"
         content="PhD researcher studying neural circuits and internal states in Drosophila at the MRC Laboratory of Molecular Biology, Cambridge.">
     <meta property="og:image" content="https://floriankaempf.com/portrait.jpg">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Florian Kämpf ">
+    <meta name="twitter:title" content="Florian Kämpf | Neural Circuits & Behaviour">
     <meta name="twitter:description"
         content="PhD researcher studying neural circuits and internal states in Drosophila at MRC-LMB, Cambridge.">
     <meta name="twitter:image" content="https://floriankaempf.com/portrait.jpg">
 
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="48x48" href="favicon-48.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="favicon-192.png">
     <link rel="canonical" href="https://floriankaempf.com/">
 
     <!-- Structured Data for Google -->
