--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- v9 - mobile profile/brain toggle -->
+<!-- v10 - SEO title and PNG favicons for Google -->
 <html lang="en">
 
 <head>
