Improve SEO: add site title, PNG favicons, Jefferis Lab reference, and site name

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- v10 - SEO title and PNG favicons for Google -->
+<!-- v11 - SEO improvements: title, favicons, Jefferis Lab, site name -->
 <html lang="en">
 
 <head>
@@ -7,21 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Florian Kämpf | Neural Circuits & Behaviour</title>
     <meta name="description"
-        content="PhD researcher studying neural circuits and internal states in Drosophila at the MRC Laboratory of Molecular Biology, Cambridge.">
+        content="PhD researcher in the Jefferis Lab studying neural circuits and internal states in Drosophila at MRC-LMB, Cambridge.">
 
     <!-- Open Graph / Social Sharing -->
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Personal Website">
     <meta property="og:url" content="https://floriankaempf.com/">
     <meta property="og:title" content="Florian Kämpf | Neural Circuits & Behaviour">
     <meta property="og:description"
-        content="PhD researcher studying neural circuits and internal states in Drosophila at the MRC Laboratory of Molecular Biology, Cambridge.">
+        content="PhD researcher in the Jefferis Lab studying neural circuits and internal states in Drosophila at MRC-LMB, Cambridge.">
     <meta property="og:image" content="https://floriankaempf.com/portrait.jpg">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Florian Kämpf | Neural Circuits & Behaviour">
     <meta name="twitter:description"
-        content="PhD researcher studying neural circuits and internal states in Drosophila at MRC-LMB, Cambridge.">
+        content="PhD researcher in the Jefferis Lab studying neural circuits and internal states in Drosophila at MRC-LMB, Cambridge.">
     <meta name="twitter:image" content="https://floriankaempf.com/portrait.jpg">
 
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
@@ -31,6 +32,14 @@
     <link rel="canonical" href="https://floriankaempf.com/">
 
     <!-- Structured Data for Google -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Personal Website",
+        "url": "https://floriankaempf.com"
+    }
+    </script>
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
