Improve SEO: add meta keywords, enhance structured data, and improve   accessibility
  This covers the three main areas: the expanded keywords/meta tags, the richer
  JSON-LD Person schema, and the aria-hidden/image dimension improvements.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <title>Florian Kämpf | Neural Circuits & Behaviour</title>
     <meta name="description"
         content="PhD researcher in the Jefferis Lab studying neural circuits and internal states in Drosophila at MRC-LMB, Cambridge.">
+    <meta name="author" content="Florian Kämpf">
+    <meta name="keywords"
+        content="Florian Kämpf, neuroscience, neural circuits, Drosophila, Drosophila melanogaster, internal states, connectomics, MRC-LMB, LMB, Cambridge, University of Cambridge, Jefferis Lab, Greg Jefferis, Gregory Jefferis, PhD, PhD researcher, calcium imaging, optogenetics, zebrafish, larval zebrafish, circuit neuroscience, CLEM, correlated light electron microscopy, photoactivation, network analysis, computational analysis, virtual reality, VR behaviour, German, Konstanz, University of Konstanz, two-photon imaging, 2-photon microscopy, pheromone, courtship, aggression, P1 neurons, sensory neuroscience, behavioural neuroscience, Bahl Lab, evidence accumulation, neural integrator, hindbrain, cichlid, Lake Tanganyika, Boehringer Ingelheim Fonds, MRC studentship, fruit fly, fly brain, neuropil, chemosensation, contact chemosensation, systems neuroscience">
+    <meta name="robots" content="index, follow">
 
     <!-- Open Graph / Social Sharing -->
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Personal Website">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:site_name" content="Florian Kämpf">
     <meta property="og:url" content="https://floriankaempf.com/">
     <meta property="og:title" content="Florian Kämpf | Neural Circuits & Behaviour">
     <meta property="og:description"
@@ -19,7 +24,7 @@
     <meta property="og:image" content="https://floriankaempf.com/portrait.jpg">
 
     <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Florian Kämpf | Neural Circuits & Behaviour">
     <meta name="twitter:description"
         content="PhD researcher in the Jefferis Lab studying neural circuits and internal states in Drosophila at MRC-LMB, Cambridge.">
@@ -36,8 +41,9 @@
     {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "Personal Website",
-        "url": "https://floriankaempf.com"
+        "name": "Florian Kämpf",
+        "url": "https://floriankaempf.com",
+        "description": "Personal academic website of Florian Kämpf, PhD researcher studying neural circuits and behaviour."
     }
     </script>
     <script type="application/ld+json">
@@ -45,27 +51,49 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Florian Kämpf",
+        "givenName": "Florian",
+        "familyName": "Kämpf",
         "url": "https://floriankaempf.com",
         "image": "https://floriankaempf.com/portrait.jpg",
+        "description": "PhD researcher studying how sensory inputs are transformed into persistent internal states that drive context-appropriate behaviour in Drosophila.",
         "jobTitle": "PhD Researcher",
         "worksFor": {
-            "@type": "Organization",
-            "name": "MRC Laboratory of Molecular Biology"
+            "@type": "ResearchOrganization",
+            "name": "MRC Laboratory of Molecular Biology",
+            "url": "https://www2.mrc-lmb.cam.ac.uk/"
+        },
+        "affiliation": {
+            "@type": "EducationalOrganization",
+            "name": "University of Cambridge",
+            "url": "https://www.cam.ac.uk/"
         },
         "alumniOf": [
             {
-                "@type": "Organization",
-                "name": "University of Konstanz"
+                "@type": "EducationalOrganization",
+                "name": "University of Konstanz",
+                "url": "https://www.uni-konstanz.de/"
             },
             {
-                "@type": "Organization",
-                "name": "University of Cambridge"
+                "@type": "EducationalOrganization",
+                "name": "University of Cambridge",
+                "url": "https://www.cam.ac.uk/"
             }
+        ],
+        "knowsAbout": [
+            "Neural circuits",
+            "Drosophila melanogaster",
+            "Internal states",
+            "Connectomics",
+            "Two-photon calcium imaging",
+            "Optogenetics",
+            "Zebrafish neurobiology",
+            "Contact chemosensation"
         ],
         "sameAs": [
             "https://scholar.google.com/citations?user=ue53aMkAAAAJ",
             "https://orcid.org/0009-0001-7036-4729",
-            "https://bsky.app/profile/flofightscience.bsky.social"
+            "https://bsky.app/profile/flofightscience.bsky.social",
+            "https://github.com/fkampf"
         ]
     }
     </script>
@@ -73,13 +101,15 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://pub.orcid.org" crossorigin>
+    <link rel="dns-prefetch" href="https://api.crossref.org">
     <link
         href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500&family=IBM+Plex+Serif:wght@400;500&display=swap"
         rel="stylesheet">
 </head>
 
 <body>
-    <div class="brain-logo" id="brainLogo">
+    <div class="brain-logo" id="brainLogo" aria-hidden="true">
         <svg viewBox="0 0 936 888" xmlns="http://www.w3.org/2000/svg">
             <g transform="matrix(2.08333,0,0,2.08333,-393.452,-393.085)">
                 <g id="striche">
@@ -306,8 +336,8 @@
         <!-- Profile Card - Fixed Left -->
         <aside class="profile-card">
             <div class="profile-image-wrapper">
-                <img src="portrait.jpg" alt="Florian Kämpf" class="profile-image">
-                <div class="profile-brain">
+                <img src="portrait.jpg" alt="Portrait of Florian Kämpf" class="profile-image" width="600" height="600">
+                <div class="profile-brain" aria-hidden="true">
                     <svg viewBox="0 0 936 888" xmlns="http://www.w3.org/2000/svg">
                         <g transform="matrix(2.08333,0,0,2.08333,-393.452,-393.085)">
                             <g id="striche-profile">
@@ -583,27 +613,27 @@
             <div class="social-links">
                 <a href="https://scholar.google.com/citations?user=ue53aMkAAAAJ&hl=en" class="social-link"
                     aria-label="Google Scholar" target="_blank" rel="noopener">
-                    <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                    <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" aria-hidden="true">
                         <path
                             d="M5.242 13.769L0 9.5 12 0l12 9.5-5.242 4.269C17.548 11.249 14.978 9.5 12 9.5c-2.977 0-5.548 1.748-6.758 4.269zM12 10a7 7 0 1 0 0 14 7 7 0 0 0 0-14z" />
                     </svg>
                 </a>
                 <a href="https://bsky.app/profile/flofightscience.bsky.social" class="social-link" aria-label="Bluesky"
                     target="_blank" rel="noopener">
-                    <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                    <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" aria-hidden="true">
                         <path
                             d="M12 10.8c-1.087-2.114-4.046-6.053-6.798-7.995C2.566.944 1.561 1.266.902 1.565.139 1.908 0 3.08 0 3.768c0 .69.378 5.65.624 6.479.815 2.736 3.713 3.66 6.383 3.364.136-.02.275-.039.415-.056-.138.022-.276.04-.415.056-3.912.58-7.387 2.005-2.83 7.078 5.013 5.19 6.87-1.113 7.823-4.308.953 3.195 2.05 9.271 7.733 4.308 4.267-4.308 1.172-6.498-2.74-7.078a8.741 8.741 0 0 1-.415-.056c.14.017.279.036.415.056 2.67.297 5.568-.628 6.383-3.364.246-.828.624-5.79.624-6.478 0-.69-.139-1.861-.902-2.206-.659-.298-1.664-.62-4.3 1.24C16.046 4.748 13.087 8.687 12 10.8Z" />
                     </svg>
                 </a>
                 <a href="mailto:florianfelixkampf@gmail.com" class="social-link" aria-label="Email">
-                    <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                    <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" aria-hidden="true">
                         <path
                             d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" />
                     </svg>
                 </a>
                 <a href="https://orcid.org/0009-0001-7036-4729" class="social-link" aria-label="ORCID" target="_blank"
                     rel="noopener">
-                    <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                    <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" aria-hidden="true">
                         <path
                             d="M12 0C5.372 0 0 5.372 0 12s5.372 12 12 12 12-5.372 12-12S18.628 0 12 0zM7.369 4.378c.525 0 .947.431.947.947s-.422.947-.947.947a.95.95 0 0 1-.947-.947c0-.525.422-.947.947-.947zm-.722 3.038h1.444v10.041H6.647V7.416zm3.562 0h3.9c3.712 0 5.344 2.653 5.344 5.025 0 2.578-2.016 5.025-5.325 5.025h-3.919V7.416zm1.444 1.303v7.444h2.297c3.272 0 4.022-2.484 4.022-3.722 0-2.016-1.284-3.722-4.097-3.722h-2.222z" />
                     </svg>
@@ -669,7 +699,7 @@
                 <h2>Publications</h2>
                 <div id="publications-list">
                     <div class="loading-container">
-                        <svg class="loading-brain" viewBox="0 0 936 888" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="loading-brain" viewBox="0 0 936 888" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                             <g transform="matrix(2.08333,0,0,2.08333,-393.452,-393.085)">
                                 <g id="striche-loader">
                                     <path d="M219.844,296.56L285.567,241.983"
