--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- v11 - SEO improvements: title, favicons, Jefferis Lab, site name -->
+<!-- v12 - SEO: meta keywords, enhanced structured data, accessibility, performance hints -->
 <html lang="en">
 
 <head>
